# minuri-server

./: .dockerignore  .env  .gitignore  ITERATION2_ERD.md  README.md  items.json  llm_test.py  pyproject.toml  user-hub.md
app/: articles_seed.json  config.py  database.py  local_results.json  main.py  models.py  nearby_interest.py  nearby_restaurants.py
app/data/: 32180DS0001_2024-25.xlsx  victoria_population_table.csv
app/routers/: api.py  journey.py  suburb.py
app/s3/guides-content/food-eating/: cheap-eats-when-broke.json  cooking-5-meals-youll-actually-eat.json  your-first-grocery-run.json
app/s3/guides-content/getting-around/: building-a-local-routine.json  finding-your-way-around-melbourne-in-week-one.json  getting-myki-and-surviving-ptv.json
app/s3/guides-content/health-wellbeing/: crisis-lines-you-can-actually-call.json  finding-a-gp-before-you-need-one.json  managing-your-prescriptions-in-a-new-city.json  medicare-bulk-billing-and-mental-health-care-plans.json  sustaining-yourself-sleep-movement-and-disconnecting.json  when-to-see-a-psych-counsellor-or-friend.json
app/s3/guides-content/home-admin/: budgeting-on-what-you-actually-earn.json  renting-without-getting-burned.json  setting-up-utilities-without-overpaying.json  (+1 more)
app/schemas/: __init__.py  journey.py  near_me.py  suburb.py
app/scripts/: __main__.py  extract.py  load_melbourne_suburbs.py  load_population_records.py  seed_static_reference_data.py  sync_s3_content.py
app/services/: journey_service.py  near_me.py  population_service.py  prompt.md  suburb_service.py
(+4 files in other folders)
