[project]
name = "minuri-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings",
    "python-dotenv>=1.2.2",
    "requests",
    "serpapi>=1.0.2",
    "sqlalchemy>=2.0.49",
]
